votka image added

--- a/index.html
+++ b/index.html
@@ -26,5 +26,6 @@
       jeno na lage..gittu jeno na lage,gittu jeno na lage,gittu jeno na lage..
     </p>
     <img src="grand.png" alt="" />
+    <img src="big.jpg" alt="big hero image" />
   </body>
 </html>
