--- a/index.html
+++ b/index.html
@@ -26,6 +26,15 @@
       jeno na lage..gittu jeno na lage,gittu jeno na lage,gittu jeno na lage..
     </p>
     <img src="grand.png" alt="" />
+    <div>
+      <h3>New Blog</h3>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci,
+        aperiam voluptatibus suscipit quia sunt porro? Unde facere nulla ducimus
+        quis, ut, necessitatibus minus, magnam harum distinctio animi laudantium
+        quae? Laborum?
+      </p>
+    </div>
     <img src="big.jpg" alt="big hero image" />
   </body>
 </html>
