added in image-add branch

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         quis, ut, necessitatibus minus, magnam harum distinctio animi laudantium
         quae? Laborum?
       </p>
+      <strong>This line is from the image-add branch of github</strong>
     </div>
     <img src="big.jpg" alt="big hero image" />
   </body>
