commited in image-add

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         quae? Laborum?
       </p>
       <strong>This line is from the image-add branch of github</strong>
+      <strong>For checking colflict in image-add branch</strong>
     </div>
     <img src="big.jpg" alt="big hero image" />
   </body>
